# webview-nodejs

./: .gitignore  .gitmodules  LICENSE  README.md  TODO.md  Webview.js  babel.config.json  index.js  jsdoc.json  package-lock.json  package.json  tsconfig.json  webview.d.ts
.github/workflows/: ci.yml  npm-publish.yml
docs/: README.zh-Hans.md
docs/jsdoc/: Webview.html  Webview_Webview.html  global.html  index.html  webview.js.html
docs/licenses/: webview.license.txt
docs/tsdoc/: index.html  modules.html
docs/tsdoc/assets/: highlight.css  main.js  navigation.js  search.js  style.css
docs/tsdoc/classes/: Webview.html
docs/tsdoc/enums/: SizeHint.html
docs/tsdoc/functions/: getLibraryPath.html
docs/tsdoc/types/: BindCallback.html  SizeHint.html  WebviewFFI.html  pointer.html  webview_t.html
docs/tsdoc/variables/: SizeHint-1.html
libs/darwin/aarch64/: libwebview.dylib
libs/darwin/x64/: libwebview.dylib
libwebview-nodejs/: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  index.js  memo.md  package-lock.json  package.json  test.js  test.mjs
libwebview-nodejs/deprecated/: CmakeLists.txt  Webview.cmake  webview.cpp  webview_wrap.cxx
libwebview-nodejs/src/: webview_wrap.cxx  webview_wrap_modified.cxx
licenses/: Microsoft-Webview2.license.txt  node-ffi-napi.license.txt  webview_deno.license.txt
src/: libwebview-nodejs.d.ts  webview.d.ts  webview.js  webview.ts
test/: README.md  add_in_node.test.js  awfice.test.js  basic_bind.test.js  ci.test.js  demo.test.js  demo.test.ts  helloworld.test.js  keybinding.test.js  main.test.js  main.test.ts  minimal_editor.js  minimaleditor.js  multi_window.test.js  set_interval.test.js  set_title.test.js  test.js  test.ts
